# GUNDAM

./: .gitignore  CMakeLists.txt  GUNDAM.cbp  GUNDAM.depend  GUNDAM.layout  GUNDAM_build_log.html  README.md  main.cpp
benchmark/: benchmark_match.cc
benchmark/graph0/: edge.txt
benchmark/graph1/: edge.txt  vertex.txt
doc/: dp_iso_todo.md  edge.md  graph.md  index.md  interface.md  todo.md  vertex.md  接口统计.xlsx
doc/prog_doc/: attribute.md  callback.md  edge.md  graph.md  graph_types.md  match.md  match_set.md  match_using_match.md  serialize.md  simulation.md  tools.md  vertex.md
doc/user_doc/: csv_format.md  data_type.md
include/: attribute.hpp  configures.hpp  graph.hpp  label.hpp  label_configure.hpp  test.hpp  vertex.hpp  vertex.hpp.save-failed  weighted_edge.hpp
include/app/: OutputGraph.cpp  ReadGraph.h  VF2.cpp  VF2.h
include/gundam/: OutputGraph.h  ReadGraph.cpp  VF2.h  algorithm.hpp  attribute.h  attribute2.h  attribute_node.hpp  boost_iso.h  container.h  container2.h  csvgraph.h  datatype.h  datetime.h  define.h  define.hpp  dp_iso.h  edge.hpp  geneator.h  graph.h  graph.h.save-failed  graph.hpp  graph_configure.h  graph_configure.hpp  graph_item.h  iterator.h  iterator2.h  label.h  label_with_wildcard.hpp  large_graph.h  large_graph2.h  large_graph3.h  match.h  matchcontainer.h  matchresult.h  node.hpp  pointer.h  rapidcsv.h  simple_small_graph.h  small_graph.h  type_check.hpp  (+8 more)
include/gundam/algorithm/: bfs.h  boost_iso.h  connected_component.h  dfs.h  dp_iso.h  dp_iso_using_match.h  match_helper.h  match_semantics.h  match_using_match.h  multi_query_dp_iso.h  multi_query_match.h  neighborhood_equivalence_class.h  simulation.h  topo_sort.h  vf2.h  vf2_boost.h
include/gundam/algorithm/simulation/: bisimulation.h  simulation.h
include/gundam/component/: attribute.h  container.h  container2.h  disjoint_set.h  generator.h  iterator.h  iterator2.h  pointer.h  set_manager.h  util.h
include/gundam/data_type/: datatype.h  datetime.h  label.h
include/gundam/graph_statistics/: graph_basic_statistics.h
include/gundam/graph_type/: graph.h  graph_base.h  graph_parameter.h  large_graph.h  large_graph2.h  large_graph3.h  simple_small_graph.h  small_graph.h  vertex_handle.h
include/gundam/io/: csvgraph.h  rapidcsv.h
include/gundam/match/: match.h  matchresult.h
include/gundam/new_type/: match.h
include/gundam/sample/: edge_sample.h  vertex_sample.h
include/gundam/serialize/: serialize.h
include/gundam/tool/: connected.h  connected_component.h  copy_to.h  diameter.h  distance.h  edge_connects.h  find_edge.h  get_neighbors.h  has_edge.h  is_link.h  is_match_to.h  is_star.h  isolate_vertex.h  k_hop.h  label_connected.h  map_edge_to.h  max_id.h  maximal_common_subgraph.h  merge_by_id.h  preserve.h  preserve_vertex_set.h  radius.h  random_walk.h  same_pattern.h  set_intersection.h  sub_graph_of.h  vertex_degree_filter.h  vertex_id_continued.h  vertex_label_connected.h
include/gundam/tool/deduplicate_patterns/: deduplicate_patterns.h  dfs_code.h
include/gundam/tool/operator/: duplicate_vertex.h  merge_by_id.h  merge_graph.h  merge_vertex.h  preserve.h  reset_edge_label.h
include/gundam/tool/random_walk/: random_walk.h  random_walk_path.h
include/gundam/tool/topological/constraints/: has_duplicated_edge.h
include/gundam/tool/topological/dag/: is_acyclic.h
include/gundam/tool/topological/path/: is_path.h
include/gundam/tool/topological/star/: cover_by_path.h  decompose_star_to_path.h  is_star.h  star_cover_by_path.h
include/gundam/tool/topological/tree/: to_tree.h
include/gundam/type_getter/: edge_attribute_handle.h  edge_handle.h  edge_id.h  edge_label.h  graph_parameter_getter.h  graph_type.h  vertex_attribute_handle.h  vertex_attribute_key.h  vertex_handle.h  vertex_id.h  vertex_label.h
include/gundam/util/: combination.h  enumerate_subset.h  hash.h  match.h  match_using_match.h  permutation.h  string.h  util.h
src/: CMakeLists.txt  error.txt  main.cpp
test/: CMakeLists.txt  test1.cc  test2.cc  test_attribute.cc  test_bfs.cc  test_bfs_limit_width.cc  test_bisimulation.cc  test_connected.cc  test_connected_component.cc  test_container.cc  test_container2.cc  test_csvgraph.cc  test_datatype.cc  test_decompose_star_to_path.cc  test_deduplicate_patterns.cc  test_dfs.cc  test_diameter.cc  test_dp_iso.cc  test_dp_iso_using_match.cc  test_get_neighbors.cc  test_graph.cc  test_graph_base.cc  test_has_isolate_vertex.cc  test_idgen.cc  test_is_acyclic.cc  test_iterator.cc  test_iterator2.cc  test_link.cc  test_match_using_match.cc  test_merge_graph.cc  test_merge_vertex.cc  test_move.cc  test_multi_query_dp_iso_using_match.cc  test_multi_query_match_using_match.cc  test_multi_vf2.cc  test_pointer.cc  test_random_walk.cc  test_random_walk_path.cc  test_same_pattern.cc  test_set_intersection.cc  (+10 more)
test/test_data/: test_pattern_set.h
